fix overflow

--- a/src/app/profile-details/profile-details.component.css
+++ b/src/app/profile-details/profile-details.component.css
@@ -8,6 +8,7 @@
   right: 0;
   top: 0;
   height: 100%;
+  padding-top: 75px;
 }
 
 #profileContent {
